k8s/gloo-edge/virtualservice.yaml
apiVersion: gateway.solo.io/v1
kind: VirtualService
metadata:
  name: mimicway
  labels:
    app.kubernetes.io/name: mimicway
    app.kubernetes.io/component: routing
spec:
  virtualHost:
    domains:
      - mimicway.example.com
    routes:
      - matchers:
          - prefix: /
        delegateAction:
          ref:
            name: mimicway
            namespace: mimicway
